--- a/admin-frontend/src/styles/tiptap.css
+++ b/admin-frontend/src/styles/tiptap.css
@@ -163,3 +163,223 @@
 .tiptap .code-block .function { color: #dcdcaa; }
 .tiptap .code-block .tag { color: #569cd6; }
 .tiptap .code-block .attribute { color: #9cdcfe; }
+
+/* Стили для выравнивания текста */
+.ProseMirror {
+  text-align: left;
+}
+
+.ProseMirror p[style*="text-align: left"] {
+  text-align: left;
+}
+
+.ProseMirror p[style*="text-align: center"] {
+  text-align: center;
+}
+
+.ProseMirror p[style*="text-align: right"] {
+  text-align: right;
+}
+
+.ProseMirror p[style*="text-align: justify"] {
+  text-align: justify;
+}
+
+.ProseMirror h1[style*="text-align: left"],
+.ProseMirror h2[style*="text-align: left"],
+.ProseMirror h3[style*="text-align: left"],
+.ProseMirror h4[style*="text-align: left"],
+.ProseMirror h5[style*="text-align: left"],
+.ProseMirror h6[style*="text-align: left"] {
+  text-align: left;
+}
+
+.ProseMirror h1[style*="text-align: center"],
+.ProseMirror h2[style*="text-align: center"],
+.ProseMirror h3[style*="text-align: center"],
+.ProseMirror h4[style*="text-align: center"],
+.ProseMirror h5[style*="text-align: center"],
+.ProseMirror h6[style*="text-align: center"] {
+  text-align: center;
+}
+
+.ProseMirror h1[style*="text-align: right"],
+.ProseMirror h2[style*="text-align: right"],
+.ProseMirror h3[style*="text-align: right"],
+.ProseMirror h4[style*="text-align: right"],
+.ProseMirror h5[style*="text-align: right"],
+.ProseMirror h6[style*="text-align: right"] {
+  text-align: right;
+}
+
+.ProseMirror h1[style*="text-align: justify"],
+.ProseMirror h2[style*="text-align: justify"],
+.ProseMirror h3[style*="text-align: justify"],
+.ProseMirror h4[style*="text-align: justify"],
+.ProseMirror h5[style*="text-align: justify"],
+.ProseMirror h6[style*="text-align: justify"] {
+  text-align: justify;
+}
+
+/* Стили для выравнивания текста */
+.ProseMirror {
+  text-align: left;
+}
+
+.ProseMirror p[style*="text-align: left"] {
+  text-align: left;
+}
+
+.ProseMirror p[style*="text-align: center"] {
+  text-align: center;
+}
+
+.ProseMirror p[style*="text-align: right"] {
+  text-align: right;
+}
+
+.ProseMirror p[style*="text-align: justify"] {
+  text-align: justify;
+}
+
+.ProseMirror h1[style*="text-align: left"],
+.ProseMirror h2[style*="text-align: left"],
+.ProseMirror h3[style*="text-align: left"],
+.ProseMirror h4[style*="text-align: left"],
+.ProseMirror h5[style*="text-align: left"],
+.ProseMirror h6[style*="text-align: left"] {
+  text-align: left;
+}
+
+.ProseMirror h1[style*="text-align: center"],
+.ProseMirror h2[style*="text-align: center"],
+.ProseMirror h3[style*="text-align: center"],
+.ProseMirror h4[style*="text-align: center"],
+.ProseMirror h5[style*="text-align: center"],
+.ProseMirror h6[style*="text-align: center"] {
+  text-align: center;
+}
+
+.ProseMirror h1[style*="text-align: right"],
+.ProseMirror h2[style*="text-align: right"],
+.ProseMirror h3[style*="text-align: right"],
+.ProseMirror h4[style*="text-align: right"],
+.ProseMirror h5[style*="text-align: right"],
+.ProseMirror h6[style*="text-align: right"] {
+  text-align: right;
+}
+
+.ProseMirror h1[style*="text-align: justify"],
+.ProseMirror h2[style*="text-align: justify"],
+.ProseMirror h3[style*="text-align: justify"],
+.ProseMirror h4[style*="text-align: justify"],
+.ProseMirror h5[style*="text-align: justify"],
+.ProseMirror h6[style*="text-align: justify"] {
+  text-align: justify;
+}
+
+/* Стили для выравнивания изображений */
+.ProseMirror .tiptap-image[style*="text-align: left"] {
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.ProseMirror .tiptap-image[style*="text-align: center"] {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ProseMirror .tiptap-image[style*="text-align: right"] {
+  display: block;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.ProseMirror .tiptap-image[style*="text-align: justify"] {
+  display: block;
+  width: 100%;
+}
+
+/* Базовые стили для изображений */
+.ProseMirror .tiptap-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+  transition: transform 0.2s ease;
+}
+
+.ProseMirror .tiptap-image:hover {
+  transform: scale(1.01);
+}
+
+/* Контейнер для изображений с выравниванием */
+.ProseMirror p.image-container {
+  text-align: center;
+  margin: 1em 0;
+}
+
+.ProseMirror p.image-container[style*="text-align: left"] {
+  text-align: left;
+}
+
+.ProseMirror p.image-container[style*="text-align: center"] {
+  text-align: center;
+}
+
+.ProseMirror p.image-container[style*="text-align: right"] {
+  text-align: right;
+}
+
+/* Стили для выравнивания текста */
+.ProseMirror {
+  text-align: left;
+}
+
+.ProseMirror p[style*="text-align: left"] {
+  text-align: left;
+}
+
+.ProseMirror p[style*="text-align: center"] {
+  text-align: center;
+}
+
+.ProseMirror p[style*="text-align: right"] {
+  text-align: right;
+}
+
+.ProseMirror p[style*="text-align: justify"] {
+  text-align: justify;
+}
+
+/* Стили для выравнивания изображений через родительские контейнеры */
+.ProseMirror p[style*="text-align: center"] .tiptap-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.ProseMirror p[style*="text-align: right"] .tiptap-image {
+  display: block;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.ProseMirror p[style*="text-align: left"] .tiptap-image {
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+/* Базовые стили для изображений */
+.ProseMirror .tiptap-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+  transition: transform 0.2s ease;
+}
+
+.ProseMirror .tiptap-image:hover {
+  transform: scale(1.01);
+}
