--- a/admin-frontend/src/styles/tiptap.css
+++ b/admin-frontend/src/styles/tiptap.css
@@ -1,4 +1,6 @@
 /* admin-frontend/src/styles/tiptap.css */
+
+/* Основные стили редактора */
 .tiptap {
   min-height: 300px;
   padding: 16px;
@@ -11,6 +13,7 @@
   outline: none;
 }
 
+/* Базовые стили текста */
 .tiptap p {
   margin: 0 0 1em 0;
 }
@@ -51,6 +54,7 @@
   margin: 1em 0 0.5em 0;
 }
 
+/* Списки */
 .tiptap ul,
 .tiptap ol {
   padding-left: 1.5em;
@@ -61,6 +65,7 @@
   margin: 0.25em 0;
 }
 
+/* Цитаты */
 .tiptap blockquote {
   border-left: 3px solid #ddd;
   margin: 1em 0;
@@ -69,6 +74,7 @@
   color: #666;
 }
 
+/* Inline код */
 .tiptap code {
   background-color: #f5f5f5;
   padding: 2px 4px;
@@ -77,20 +83,7 @@
   font-size: 0.9em;
 }
 
-/* Стили для блоков кода */
-.tiptap .code-block {
-  background-color: #1e1e1e;
-  color: #d4d4d4;
-  padding: 16px;
-  border-radius: 4px;
-  overflow-x: auto;
-  margin: 1em 0;
-  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
-  font-size: 0.9em;
-  line-height: 1.4;
-  border: 1px solid #333;
-}
-
+/* Блоки кода */
 .tiptap pre {
   background-color: #1e1e1e;
   color: #d4d4d4;
@@ -112,6 +105,21 @@
   font-family: inherit;
 }
 
+/* Специальные блоки кода */
+.tiptap .code-block {
+  background-color: #1e1e1e;
+  color: #d4d4d4;
+  padding: 16px;
+  border-radius: 4px;
+  overflow-x: auto;
+  margin: 1em 0;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+  font-size: 0.9em;
+  line-height: 1.4;
+  border: 1px solid #333;
+}
+
+/* Ссылки */
 .tiptap .custom-link {
   color: #1976d2;
   text-decoration: underline;
@@ -122,6 +130,7 @@
   color: #115293;
 }
 
+/* Верхний/нижний индекс */
 .tiptap sup {
   vertical-align: super;
   font-size: smaller;
@@ -132,59 +141,12 @@
   font-size: smaller;
 }
 
-.tiptap [contenteditable="true"] {
-  outline: none;
-}
-
-.tiptap [contenteditable="true"]:focus {
-  outline: none;
-}
-
-/* Добавим в конец tiptap.css */
-.tiptap pre[data-raw-html] code {
-  /* Отключаем любую обработку для сырых HTML блоков */
-  background: none;
-  color: inherit;
-  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
-}
-
-.tiptap pre[data-raw-html] {
-  /* Специальные стили для блоков с сырым HTML */
-  background-color: #1e1e1e;
-  color: #d4d4d4;
-  border: 2px dashed #666;
-}
-
-/* Подсветка синтаксиса для блоков кода (базовая) */
-.tiptap .code-block .keyword { color: #569cd6; }
-.tiptap .code-block .string { color: #ce9178; }
-.tiptap .code-block .number { color: #b5cea8; }
-.tiptap .code-block .comment { color: #6a9955; }
-.tiptap .code-block .function { color: #dcdcaa; }
-.tiptap .code-block .tag { color: #569cd6; }
-.tiptap .code-block .attribute { color: #9cdcfe; }
-
-/* Стили для выравнивания текста */
+/* Выравнивание текста */
 .ProseMirror {
   text-align: left;
 }
 
-.ProseMirror p[style*="text-align: left"] {
-  text-align: left;
-}
-
-.ProseMirror p[style*="text-align: center"] {
-  text-align: center;
-}
-
-.ProseMirror p[style*="text-align: right"] {
-  text-align: right;
-}
-
-.ProseMirror p[style*="text-align: justify"] {
-  text-align: justify;
-}
-
+.ProseMirror p[style*="text-align: left"],
 .ProseMirror h1[style*="text-align: left"],
 .ProseMirror h2[style*="text-align: left"],
 .ProseMirror h3[style*="text-align: left"],
@@ -194,6 +156,7 @@
   text-align: left;
 }
 
+.ProseMirror p[style*="text-align: center"],
 .ProseMirror h1[style*="text-align: center"],
 .ProseMirror h2[style*="text-align: center"],
 .ProseMirror h3[style*="text-align: center"],
@@ -203,6 +166,7 @@
   text-align: center;
 }
 
+.ProseMirror p[style*="text-align: right"],
 .ProseMirror h1[style*="text-align: right"],
 .ProseMirror h2[style*="text-align: right"],
 .ProseMirror h3[style*="text-align: right"],
@@ -212,6 +176,7 @@
   text-align: right;
 }
 
+.ProseMirror p[style*="text-align: justify"],
 .ProseMirror h1[style*="text-align: justify"],
 .ProseMirror h2[style*="text-align: justify"],
 .ProseMirror h3[style*="text-align: justify"],
@@ -221,165 +186,89 @@
   text-align: justify;
 }
 
-/* Стили для выравнивания текста */
-.ProseMirror {
-  text-align: left;
-}
-
-.ProseMirror p[style*="text-align: left"] {
-  text-align: left;
-}
-
-.ProseMirror p[style*="text-align: center"] {
-  text-align: center;
-}
-
-.ProseMirror p[style*="text-align: right"] {
-  text-align: right;
-}
-
-.ProseMirror p[style*="text-align: justify"] {
-  text-align: justify;
-}
-
-.ProseMirror h1[style*="text-align: left"],
-.ProseMirror h2[style*="text-align: left"],
-.ProseMirror h3[style*="text-align: left"],
-.ProseMirror h4[style*="text-align: left"],
-.ProseMirror h5[style*="text-align: left"],
-.ProseMirror h6[style*="text-align: left"] {
-  text-align: left;
-}
-
-.ProseMirror h1[style*="text-align: center"],
-.ProseMirror h2[style*="text-align: center"],
-.ProseMirror h3[style*="text-align: center"],
-.ProseMirror h4[style*="text-align: center"],
-.ProseMirror h5[style*="text-align: center"],
-.ProseMirror h6[style*="text-align: center"] {
-  text-align: center;
-}
-
-.ProseMirror h1[style*="text-align: right"],
-.ProseMirror h2[style*="text-align: right"],
-.ProseMirror h3[style*="text-align: right"],
-.ProseMirror h4[style*="text-align: right"],
-.ProseMirror h5[style*="text-align: right"],
-.ProseMirror h6[style*="text-align: right"] {
-  text-align: right;
-}
-
-.ProseMirror h1[style*="text-align: justify"],
-.ProseMirror h2[style*="text-align: justify"],
-.ProseMirror h3[style*="text-align: justify"],
-.ProseMirror h4[style*="text-align: justify"],
-.ProseMirror h5[style*="text-align: justify"],
-.ProseMirror h6[style*="text-align: justify"] {
-  text-align: justify;
-}
-
-/* Стили для выравнивания изображений */
-.ProseMirror .tiptap-image[style*="text-align: left"] {
-  display: block;
-  margin-left: 0;
-  margin-right: auto;
-}
-
-.ProseMirror .tiptap-image[style*="text-align: center"] {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.ProseMirror .tiptap-image[style*="text-align: right"] {
-  display: block;
-  margin-left: auto;
-  margin-right: 0;
-}
-
-.ProseMirror .tiptap-image[style*="text-align: justify"] {
-  display: block;
-  width: 100%;
-}
-
-/* Базовые стили для изображений */
+/* Стили для изображений с выравниванием */
 .ProseMirror .tiptap-image {
   max-width: 100%;
   height: auto;
   border-radius: 4px;
-  transition: transform 0.2s ease;
+  margin: 0.5em 0;
 }
 
-.ProseMirror .tiptap-image:hover {
-  transform: scale(1.01);
-}
-
-/* Контейнер для изображений с выравниванием */
-.ProseMirror p.image-container {
-  text-align: center;
+/* Контейнеры для изображений с выравниванием */
+.ProseMirror .image-container {
   margin: 1em 0;
-}
-
-.ProseMirror p.image-container[style*="text-align: left"] {
-  text-align: left;
-}
-
-.ProseMirror p.image-container[style*="text-align: center"] {
   text-align: center;
 }
 
-.ProseMirror p.image-container[style*="text-align: right"] {
-  text-align: right;
-}
-
-/* Стили для выравнивания текста */
-.ProseMirror {
-  text-align: left;
-}
-
-.ProseMirror p[style*="text-align: left"] {
-  text-align: left;
-}
-
-.ProseMirror p[style*="text-align: center"] {
+.ProseMirror .image-container[style*="text-align: center"] {
   text-align: center;
 }
 
-.ProseMirror p[style*="text-align: right"] {
+.ProseMirror .image-container[style*="text-align: right"] {
   text-align: right;
 }
 
-.ProseMirror p[style*="text-align: justify"] {
-  text-align: justify;
+.ProseMirror .image-container[style*="text-align: left"] {
+  text-align: left;
 }
 
-/* Стили для выравнивания изображений через родительские контейнеры */
-.ProseMirror p[style*="text-align: center"] .tiptap-image {
+.ProseMirror .image-container img {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+  border-radius: 4px;
+}
+
+/* Специальные классы для выравнивания изображений */
+.ProseMirror img[data-align="center"] {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-.ProseMirror p[style*="text-align: right"] .tiptap-image {
+.ProseMirror img[data-align="right"] {
   display: block;
   margin-left: auto;
   margin-right: 0;
 }
 
-.ProseMirror p[style*="text-align: left"] .tiptap-image {
+.ProseMirror img[data-align="left"] {
   display: block;
   margin-left: 0;
   margin-right: auto;
 }
 
-/* Базовые стили для изображений */
-.ProseMirror .tiptap-image {
-  max-width: 100%;
-  height: auto;
-  border-radius: 4px;
-  transition: transform 0.2s ease;
+/* Стили для параграфов с изображениями */
+.ProseMirror p > img {
+  display: inline-block;
 }
 
-.ProseMirror .tiptap-image:hover {
-  transform: scale(1.01);
+.ProseMirror p[data-align="center"] {
+  text-align: center;
+}
+
+.ProseMirror p[data-align="center"] > img {
+  display: inline-block;
+}
+
+.ProseMirror p[data-align="right"] {
+  text-align: right;
+}
+
+.ProseMirror p[data-align="right"] > img {
+  display: inline-block;
+}
+
+.ProseMirror p[data-align="left"] {
+  text-align: left;
+}
+
+.ProseMirror p[data-align="left"] > img {
+  display: inline-block;
+}
+
+/* Улучшенные стили для выбранных изображений */
+.ProseMirror .ProseMirror-selectednode {
+  outline: 2px solid #1976d2;
+  outline-offset: 2px;
 }
